fazendo deploy na aws

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -8,7 +8,8 @@
   <div class="row">
     <div class="col-sm">
       Olá {{usuario.funcionario.nome}}
-        <a href="{url 'list_funcionarios'}">Gerenciar funcionario</a>
+        <a href="{% url 'list_funcionarios' %}">Gerenciar funcionario</a>
+        <a href="{% url 'list_departamento' %}">Gerenciar Departamentos</a>
     </div>
 
     <div class="col-sm">
