--- a/apps/documentos/templates/documentos/documento_form.html
+++ b/apps/documentos/templates/documentos/documento_form.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 {% load bootstrap %}
 
-
 {% block main %}
-
 
     <form method="post">
         {% csrf_token %}
         {{ form|bootstrap }}
-        <button type="submit" class="btn btn-primary">Salvar</button>
+        <button type="submit" class="btn btn-primary">Adicionar</button>
     </form>
+<br>
 
 {% endblock %}
