listagem de registro de hora_extra

--- a/apps/core/templates/core/index.html
+++ b/apps/core/templates/core/index.html
@@ -10,6 +10,7 @@
       Olá {{usuario.funcionario.nome}}
         <a href="{% url 'list_funcionarios' %}">Gerenciar funcionario</a>
         <a href="{% url 'list_departamento' %}">Gerenciar Departamentos</a>
+        <a href="{% url 'list_hora_extra' %}">Gerenciar horas extras</a>
     </div>
 
     <div class="col-sm">
