feito a criação de relatorios de hora e de funcionarios

--- a/apps/funcionarios/templates/funcionarios/funcionario_list.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_list.html
@@ -10,5 +10,6 @@
     {% endfor %}
 
 <a href="{% url 'create_funcionario' %}" class="btn btn-primary">Novo</a>
+<a href="{% url 'relatorio_funcionarios' %}" class="btn btn-primary">Gerar relatorio </a>
 
 {% endblock %}
