--- a/apps/funcionarios/templates/funcionarios/funcionario_form.html
+++ b/apps/funcionarios/templates/funcionarios/funcionario_form.html
@@ -8,13 +8,57 @@
         <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
 <br>
-<a href="{% url 'create_documento' object.id %}" class="btn btn-success">Novo Documento</a>
 <br>
 
-{% for documento in object.documento_set.all %}
+<hr>
 
-    <a href="{{ documento.arquivo.url }}">{{documento}}</a> <br>
+<h3>Documentos</h3>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Documentos</th>
 
-{% endfor %}
+    </tr>
+    </thead>
+    <tbody>
+    {% for documento in object.documento_set.all %}
+    <tr>
+        <td><a href="{{ documento.arquivo.url }}">{{documento}}</a></td>
+        <td>
+
+
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+{% if object %}
+    <a href="{% url 'create_documento' object.id %}" class="btn btn-primary">Novo Documento</a>
+{% endif %}
+<br>
+<br>
+
+<h3>Banco de horas</h3>
+<table class="table">
+    <thead>
+    <tr>
+        <th scope="col">Motivo</th>
+        <th scope="col">Horas</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    {% for registro_hora in object.registrohoraextra_set.all %}
+    <tr>
+        <td><a href="{% url 'update_hora_extra' registro_hora.id %}">{{registro_hora.motivo}}</a></td>
+        <td>{{registro_hora.horas}}</td>
+
+    </tr>
+    {% endfor %}
+    </tbody>
+</table>
+    <h3>Saldo de horas extras : {{object.total_horas_extra}}H</h3>
+    <a href="{% url 'create_hora_extra' %}" class="btn btn-primary">Novo Apontamento</a>
+<br>
 
 {% endblock %}
