--- a/templates/base.html
+++ b/templates/base.html
@@ -12,13 +12,18 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>{% block title %} {% endblock %}</title>
+    {% block static_css %}
+
+    {% endblock %}
 </head>
 <body>
     <div class="container">
 
-        {% block main %} {% endblock %}
+        {% block main %}
+        {% endblock %}
 
     </div>
-
+        {% block static %}
+        {% endblock %}
 </body>
 </html>
